--- a/.eslintrc
+++ b/.eslintrc
@@ -18,17 +18,18 @@
     "plugin:import/typescript",
     "plugin:jsx-a11y/recommended",
     "plugin:eslint-comments/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "eslint-config-prettier"
   ],
   "rules": {
-    "no-unused-vars": "warn",
-    "@typescript-eslint/no-unused-vars": ["warn"],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["off"],
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/prop-types": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-key": "error"
+    "react/jsx-key": "error",
+    "no-undef": "off"
   }
 }
