--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "webpack-starter",
-  "homepage": "https://github.com/Pabl1k/webpack-starter",
+  "name": "dnd-todolist",
   "version": "1.0.0",
-  "description": "The empty React project with Webpack setup",
+  "description": "Drag and Drop To-do list project",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
@@ -33,6 +32,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-hooks": "^0.4.3",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
