--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "dart-sass": "^1.25.0",
-    "firebase": "^9.9.4",
+    "firebase": "8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.0.3",
+    "react-firebase-hooks": "^3.0.5",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
