--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
     "react/jsx-key": "error",
     "jsx-a11y/no-autofocus": "off",
     "no-undef": "off",
-    "no-console": "warn"
+    "no-console": "warn",
+    "react-hooks/rules-of-hooks": "off"
   }
 }
