--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://pabl1k.github.io/DnD-Todolist",
   "name": "dnd-todolist",
   "version": "1.0.0",
   "description": "Drag and Drop To-do list project",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
@@ -14,7 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/gh-pages": "^3.2.1",
     "firebase": "8.2.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^3.0.5",
